--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,15 +1,118 @@
-<div class="row d-flex justify-content-center container-fluid bg-dark max-vh text-white">
-   <div class="col-12 w-75 h-footer-content bg-primary text-white row">
-      <div class="col-xl-3 col-sm-6 pt-4" style="background-color: red;">
-         <div class="w-100 h-75 bg-black">
-            
+<div class="g-0 default-font row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
+   <div class="d-flex justify-content-center align-items-center h-title-footer">
+      <div class="title-underline px-4 pb-2 d-flex align-items-center justify-content-center">
+         <h1 class="fw-bold">CONCERT TICKET</h1>
+      </div>
+   </div>
+
+   <div class="p-0 col-12 w-content h-footer-content text-white row pt-4">
+
+      <!-- Information -->
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="w-75 h-100 pt-2">
+            <h4 class="mb-4 fw-bold">Contact Information</h4>
+
+            <div class="mb-4">
+               <h5 class="fw-bold">Address</h5>
+               <p>Central Jakarta, Indonesia</p>
+            </div>
+
+            <div class="mb-4">
+               <h5 class="fw-bold">Official Email</h5>
+               <p><a href="" class="text-white">support@concertticket.com</a></p>
+            </div>
+
+            <div class="mb-4">
+               <h5 class="fw-bold">Hotline Number</h5>
+               <p>+62 21 8754 2391</p>
+            </div>
+
+            <div>
+               <h5 class="fw-bold">CS Operating Hours</h5>
+               <p>09:00 AM - 11:00 (WIB)</p>
+            </div>
          </div>
       </div>
-      <div class="col-xl-3 col-sm-6" style="background-color: green;"></div>
-      <div class="col-xl-3 col-sm-6" style="background-color: blue;"></div>
-      <div class="col-xl-3 col-sm-6" style="background-color: purple;"></div>
+
+      <!-- Social Media -->
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="w-75 h-100 pt-2">
+            <h4 class="mb-4 fw-bold">Follow Us</h4>
+
+            <div class="mb-4">
+               <h5 class="fw-bold">Instagram</h5>
+               <p><a href="" class="text-white rm-underline">@concertticket.official</a></p>
+
+            </div>
+
+            <div class="mb-4">
+               <h5 class="fw-bold">Youtube</h5>
+               <p><a href="" class="text-white rm-underline">Concert Ticket Official</a></p>
+            </div>
+
+            <div class="mb-4">
+               <h5 class="fw-bold">Tiktok</h5>
+               <p><a href="" class="text-white rm-underline">@concertticket_official</a></p>
+            </div>
+
+            <div>
+               <h5 class="fw-bold">Facebook</h5>
+               <p><a href="" class="text-white rm-underline">Concert Ticket-Official Page</a></p>
+            </div>
+         </div>
+      </div>
+
+      <!-- Support -->
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="w-75 h-100 pt-2">
+            <h4 class="mb-4 fw-bold">Support</h4>
+
+            <div class="mb-4">
+               <p><a href="" class="text-white rm-underline">Terms & Condition</a></p>
+
+            </div>
+
+            <div class="mb-4">
+               <p><a href="" class="text-white rm-underline">Privacy & Policies</a></p>
+            </div>
+
+            <div class="mb-4">
+               <p><a href="" class="text-white rm-underline">Refund & Cancellation Policy</a></p>
+            </div>
+
+            <div>
+               <p><a href="" class="text-white rm-underline">Ticketing Terms</a></p>
+            </div>
+         </div>
+      </div>
+
+      <!-- Go Back to -->
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+         <div class="w-75 h-100 pt-2">
+            <h4 class="mb-4 fw-bold">Back to navigate</h4>
+
+            <div class="mb-4">
+               <p><a href="" class="text-white rm-underline">Home</a></p>
+
+            </div>
+
+            <div class="mb-4">
+               <p><a href="" class="text-white rm-underline">Tickets</a></p>
+            </div>
+
+            <div class="mb-4">
+               <p><a href="" class="text-white rm-underline">FAQ</a></p>
+            </div>
+
+            <div>
+               <p><a href="" class="text-white rm-underline">Contact Us</a></p>
+            </div>
+         </div>
+      </div>
    </div>
-   <div class="col-12 w-75 h-footer-copyRight bg-black">
-      
+
+   <!-- Copyright -->
+   <div class="col-12 w-100 h-footer-copyRight p-3 d-flex justify-content-center">
+      <p>© 2023-2030 PT. Global Ticket Concert. All Rights Reserved.</p>
    </div>
 </div>
