--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -5,7 +5,7 @@
       </div>
    </div>
 
-   <div class="p-0 col-12 w-content h-footer-content text-white row pt-4">
+   <div class="p-0 col-12 w-content h-footer-content text-white row">
 
       <!-- Information -->
       <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
@@ -112,7 +112,10 @@
    </div>
 
    <!-- Copyright -->
-   <div class="col-12 w-100 h-footer-copyRight p-3 d-flex justify-content-center">
+</div>
+
+<div class="w-100 p-3 d-flex justify-content-center align-items-center">
+   <div class="footer-custom d-flex justify-content-center align-items-center">
       <p>© 2023-2030 PT. Global Ticket Concert. All Rights Reserved.</p>
    </div>
 </div>
