--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -11,8 +11,8 @@
 
       <!-- List -->
       <div class="col-8 p-0">
-         <div class="h-100 pb-3 d-flex justify-content-center align-items-end">
-            <ul class="d-flex gap-3 list-group list-group-horizontal text-white">
+         <div class="h-100 gap-3 pb-3 d-flex justify-content-center align-items-end">
+            <ul class="d-flex list-group list-group-horizontal text-white">
                <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">HOME</span></a></li>
                <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">TICKETS</span></a></li>
                <li class="fw-bold px-4 py-2 nav-link"><a><span class="nav-text">FAQ</span></a></li>
@@ -27,17 +27,21 @@
          <div class="search-form p-sb" role="search">
             <input class="search-input" type="search" [(ngModel)]="query" (input)="onSearchInput()"
                placeholder="Search events..." aria-label="Search events" autocomplete="off" />
-            <button class="search-btn pb-4" type="button" (click)="onSearchInput()">
-               <i class="bi bi-search"></i>
+            <button class="search-btn pb-3" type="button" (click)="onSearchInput()">
+               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                  viewBox="0 0 16 16">
+                  <path
+                     d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+               </svg>
             </button>
             @if (query.trim().length && suggestions.length) {
-               <ul class="search-suggestions">
-                  @for (s of suggestions; track s) {
-                  <li (click)="selectSuggestion(s)" tabindex="0">
-                     {{ s.title }}
-                  </li>
-                  }
-               </ul>
+            <ul class="search-suggestions">
+               @for (s of suggestions; track s) {
+               <li (click)="selectSuggestion(s)" tabindex="0">
+                  {{ s.title }}
+               </li>
+               }
+            </ul>
             }
          </div>
       </div>
