--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,4 +1,5 @@
-<div class="g-0 default-font row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
+<div
+   class="g-0 default-font row d-flex justify-content-center container-fluid bg-black max-vh text-white border-footer footer-gradient">
    <div class="d-flex justify-content-center align-items-center h-title-footer">
       <div class="title-underline px-4 pb-2 d-flex align-items-center justify-content-center">
          <h1 class="fw-bold">CONCERT TICKET</h1>
@@ -8,7 +9,7 @@
    <div class="p-0 col-12 w-content h-footer-content text-white row">
 
       <!-- Information -->
-      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center border-side">
          <div class="w-75 h-100 pt-2">
             <h4 class="mb-4 fw-bold">Contact Information</h4>
 
@@ -35,7 +36,7 @@
       </div>
 
       <!-- Social Media -->
-      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center border-side">
          <div class="w-75 h-100 pt-2">
             <h4 class="mb-4 fw-bold">Follow Us</h4>
 
@@ -63,7 +64,7 @@
       </div>
 
       <!-- Support -->
-      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center">
+      <div class="col-xl-3 col-sm-6 px-3 d-flex justify-content-center border-side">
          <div class="w-75 h-100 pt-2">
             <h4 class="mb-4 fw-bold">Support</h4>
 
@@ -116,6 +117,6 @@
 
 <div class="w-100 p-3 d-flex justify-content-center align-items-center">
    <div class="footer-custom d-flex justify-content-center align-items-center">
-      <p>© 2023-2030 PT. Global Ticket Concert. All Rights Reserved.</p>
+      <p>© 2023-2030 PT. Global Concert Ticket. All Rights Reserved.</p>
    </div>
 </div>
