--- a/src/app/ticket-page/ticket-buy/ticket-buy.html
+++ b/src/app/ticket-page/ticket-buy/ticket-buy.html
@@ -1,5 +1,5 @@
 @if (event) {
-<section class="ticket-page container-fluid px-4 py-4">
+<div class="ticket-page container-fluid py-4">
    <div class="row h-100">
       <!-- Left column: scaled image (50%) -->
       <div class="col-lg-6 col-md-12">
@@ -82,5 +82,5 @@
          </div>
       </div>
    </div>
-</section>
+</div>
 }
