--- a/src/app/login/eo-login-page/eo-login-page.html
+++ b/src/app/login/eo-login-page/eo-login-page.html
@@ -12,17 +12,20 @@
 
          <div class="mb-3">
             <label for="username" class="form-label">Username</label>
-            <input type="text" class="form-control form-control-sm bg-dark border-dark text-white">
+            <input #username type="text" class="form-control form-control-sm bg-dark border-dark text-white">
          </div>
 
          <div class="mb-5">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control form-control-sm bg-dark border-dark text-white">
+            <input #password type="password" class="form-control form-control-sm bg-dark border-dark text-white">
          </div>
 
+         <div class="mb-2 text-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
+
          <div class="d-flex justify-content-center w-100 mb-3">
-            <button class="btn bg-opacity-75 w-100" style="background-color: #feb706; color: black">
-               Sign In
+            <button (click)="login(username.value, password.value)" [disabled]="isLoading" class="btn bg-opacity-75 w-100" style="background-color: #feb706; color: black">
+               <span *ngIf="!isLoading">Sign In</span>
+               <span *ngIf="isLoading">Signing in...</span>
             </button>
          </div>
       </div>
