--- a/src/app/ticket-page/ticket-buy/ticket-buy.html
+++ b/src/app/ticket-page/ticket-buy/ticket-buy.html
@@ -3,10 +3,9 @@
   <div class="auth-required-message">
     <div class="message-box">
       <h2>🔐 Login Required</h2>
-      <p>You need to login or sign up to purchase tickets</p>
+      <p>You need to login to purchase tickets</p>
       <div class="button-group">
         <button type="button" class="btn btn-login" routerLink="/login">Login</button>
-        <button type="button" class="btn btn-signup" routerLink="/sign-up">Sign Up</button>
       </div>
     </div>
   </div>
