--- a/src/app/login/eo-login-page/eo-login-page.html
+++ b/src/app/login/eo-login-page/eo-login-page.html
@@ -20,12 +20,18 @@
             <input #password type="password" class="form-control form-control-sm bg-dark border-dark text-white">
          </div>
 
-         <div class="mb-2 text-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
+         @if (errorMessage) {
+            <div class="mb-2 text-danger">{{ errorMessage }}</div>
+         }
 
          <div class="d-flex justify-content-center w-100 mb-3">
             <button (click)="login(username.value, password.value)" [disabled]="isLoading" class="btn bg-opacity-75 w-100" style="background-color: #feb706; color: black">
-               <span *ngIf="!isLoading">Sign In</span>
-               <span *ngIf="isLoading">Signing in...</span>
+               @if (!isLoading) {
+                  <span>Sign In</span>
+               }
+               @if (isLoading) {
+                  <span>Signing in...</span>
+               }
             </button>
          </div>
       </div>
